tests/rosetta/out/Go/bell-numbers.error
type error: error[T004]: `` is not callable
  --> /workspace/mochi/tests/rosetta/x/Mochi/bell-numbers.mochi:34:31

 34 |     print("" + str(i).padStart(2, " ") + ": " + str(bt[i][0]))
    |                               ^

help:
  Use a function or closure in this position.